--- a/riscv-sbi.adoc
+++ b/riscv-sbi.adoc
@@ -70,6 +70,7 @@ https://creativecommons.org/licenses/by/4.0/.
 * Added SBI CPPC extension
 * Added error code to refer to invalid state of a state machine.
 * Added error code to refer to a value which is out of its valid range.
+* Added SBI supervisor sofware event extension
 
 === Version 1.0.0
 
@@ -2187,6 +2188,8 @@ The possible error codes returned in `sbiret.error` are shown in
 | sbi_cppc_read_hi    | 2.0         |  2  | 0x43505043
 | sbi_cppc_write      | 2.0         |  3  | 0x43505043
 |===
+
+include::riscv-sbi-sse.adoc[]
 
 == Experimental SBI Extension Space (EIDs #0x08000000 - #0x08FFFFFF)
 
