--- a/riscv-sbi.adoc
+++ b/riscv-sbi.adoc
@@ -1880,6 +1880,8 @@ below.
 | sbi_debug_console_write_byte    | 2.0         | 2   | 0x4442434E
 |===
 
+include::riscv-sbi-sse.adoc[]
+
 == Experimental SBI Extension Space (EIDs #0x08000000 - #0x08FFFFFF)
 
 No management.
