--- a/riscv-sbi.adoc
+++ b/riscv-sbi.adoc
@@ -76,6 +76,7 @@ https://creativecommons.org/licenses/by/4.0/.
 * Added SBI steal-time accounting extension
 * Added error code to refer to invalid state of a state machine.
 * Added error code to refer to a value which is out of its valid range.
+* Added SBI supervisor sofware event extension
 
 === Version 1.0.0
 
@@ -2849,6 +2850,11 @@ below.
 | Function Name               | SBI Version | FID | EID
 | sbi_steal_time_set_shmem    | 2.0         |  0  | 0x535441
 |===
+
+////
+Chapter for Supervisor Software Events
+////
+include::riscv-sbi-sse.adoc[]
 
 == Experimental SBI Extension Space (EIDs #0x08000000 - #0x08FFFFFF)
 
